config/kubernetes/local/caesar-rest-beat-worker.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: beat-worker
  labels:
    app: beat-worker
spec:
  selector:
    matchLabels:
      app: beat-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: beat-worker
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: caesar-storage
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
      - name: beat-worker
        image: sriggi/caesar-rest-beat-worker:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: caesar-storage
            mountPath: /mnt/storage
        securityContext:
          allowPrivilegeEscalation: false
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
