config/kubernetes/local/caesar-rest-beat.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: beat
  labels:
    app: beat
spec:
  selector:
    matchLabels:
      app: beat
  replicas: 1
  template:
    metadata:
      labels:
        app: beat
    spec:
      hostname: beat
      containers:
      - name: beat
        image: sriggi/caesar-rest-beat:latest
        imagePullPolicy: Always 
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
