config/kubernetes/local/caesar-rest-worker.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: caesar-storage
        persistentVolumeClaim:
          claimName: pv-claim
      hostname: worker
      containers:
      - name: worker
        image: sriggi/caesar-rest-worker:light
        imagePullPolicy: Always 
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
        volumeMounts:
          - name: caesar-storage
            mountPath: /mnt/storage
        securityContext:
          allowPrivilegeEscalation: false
