config/kubernetes/local/caesar-rest.yaml
apiVersion: v1
kind: Service
metadata:
  name: caesar-rest
  labels:
    app: caesar-rest
spec:
#  type: NodePort
  ports:
  - port: 3031
    protocol: TCP
    targetPort: 3031
#    nodePort: 30000
  selector:
    app: caesar-rest
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: caesar-rest
  labels:
    app: caesar-rest
spec:
  selector:
    matchLabels:
      app: caesar-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: caesar-rest
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: caesar-storage
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
      - name: caesar-rest
        image: sriggi/caesar-rest:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: caesar-storage
            mountPath: /mnt/storage
        securityContext:
          allowPrivilegeEscalation: false
        resources: 
          requests:
            cpu: "0.1"
            memory: "256Mi"
        ports:
        - containerPort: 3031
